--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,8 @@
 	margin-top: 80px; /* Add a top margin to avoid content overlay */
 }
 
+
+
 p {
 	font-size: 1.5em;
 }
@@ -127,7 +129,10 @@ font-size: 0.8em;
 
 
 
-
+/*IMAGE HIDE REMOVE*/
+.d-none {
+    display: true;
+}
 
 
 
