--- a/css/styles.css
+++ b/css/styles.css
@@ -4,11 +4,11 @@
 	margin-top: 80px; /* Add a top margin to avoid content overlay */
 }
 
-
+/*
 
 p {
 	font-size: 1.5em;
-}
+}*/
 
 body {
 	position: relative;
@@ -93,6 +93,7 @@ font-size: 0.8em;
 .jumbotron {
 	background-color: #f9f9f9;
 	font-weight: 300;
+	font-size: 1.5em;
 }
 .notice {
 	font-weight: 400;
@@ -101,21 +102,22 @@ font-size: 0.8em;
 /*Intro ReadMore Styling*/
 .jumbotron {
     background-color: #fff;
+
 }
 .jumbotron .container > p > a {
 	font-size: 15px;
 	color: #AC3B61;
 }
-.jumbotron .container > p > a > i{
+/*.jumbotron .container > p > a > i{
 	font-size: 12px;
-	color: #AC3B61BF;
+	color: #AC3B61;
 }
-
+*/
 #arrow {
   position: relative;
   right: 0;
   transition: right ease 0.5s;
-  color: #AC3B61BF;
+  color: #AC3B61;
 }
 #arrow:hover {
   right: -10px;
@@ -123,18 +125,92 @@ font-size: 0.8em;
   color: #AC3B61;
 }
 
-.parent:hover i:not(:hover) {
+/*.parent:hover i:not(:hover) {
     color: #AC3B61;
 }
+*/
 
-
-
-/*IMAGE HIDE REMOVE*/
-.d-none {
-    display: true;
+.img-wrap {
+  	height: auto;
+	width:	100%;
+	border-radius: 2%;
 }
 
 
 
 
+/**/
 
+
+.footer-basic-centered{
+	/*background-color: #292c2f;*/
+	background-color: #fff;
+
+	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+	box-sizing: border-box;
+	width: 100%;
+	text-align: center;
+	font: normal 18px sans-serif;
+
+	padding: 45px;
+	margin-top: 80px;
+}
+
+.footer-basic-centered .footer-company-motto{
+	color:  #8d9093;
+	font-size: 24px;
+	margin: 0;
+}
+
+.footer-basic-centered .footer-company-name{
+	color:  #8f9296;
+	font-size: 14px;
+	margin: 0;
+}
+
+.footer-basic-centered .footer-links{
+	list-style: none;
+	font-weight: bold;
+	color:  #ffffff;
+	padding: 35px 0 23px;
+	margin: 0;
+}
+
+.footer-basic-centered .footer-links a{
+	display:inline-block;
+	text-decoration: none;
+	color: inherit;
+}
+
+/* If you don't want the footer to be responsive, remove these media queries */
+
+@media (max-width: 600px) {
+
+	.footer-basic-centered{
+		padding: 35px;
+	}
+
+	.footer-basic-centered .footer-company-motto{
+		font-size: 18px;
+	}
+
+	.footer-basic-centered .footer-company-name{
+		font-size: 12px;
+	}
+
+	.footer-basic-centered .footer-links{
+		font-size: 14px;
+		padding: 25px 0 20px;
+	}
+
+	.footer-basic-centered .footer-links a{
+		line-height: 1.8;
+	}
+}
+
+
+.foot-shadow {
+	-webkit-box-shadow: 0px -1px 300px 0px rgba(0,0,0,0.05);
+	-moz-box-shadow: 0px -1px 300px 0px rgba(0,0,0,0.05);
+	box-shadow: 0px -1px 300px 0px rgba(0,0,0,0.05);
+}
