--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
 /* Add a black background color to the top navigation */
 
-.main {
-	margin-top: 80px; /* Add a top margin to avoid content overlay */
-}
+/*.main {
+	margin-top: 80px;  
+}*/
 
 /*
 
@@ -91,6 +91,7 @@ font-size: 0.8em;
 	color: #AC3B61;
 }*/
 .jumbotron {
+	padding-top: 120px;
 	background-color: #f9f9f9;
 	font-weight: 300;
 	font-size: 1.5em;
