--- a/css/styles.css
+++ b/css/styles.css
@@ -131,9 +131,9 @@ p {
 }
 */
 
-.img_parent{
+/*.img_parent{
 	padding: 20px;
-}
+}*/
 
 .img-wrap {
 	height: auto;
@@ -144,6 +144,25 @@ p {
 	color: #AC3B61;
 }
 
+
+
+.card {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid rgba(0,0,0,0);
+    border-radius: .25rem;
+    padding: 20px;
+}
 
 
 
