--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,6 @@ body {
 
 }
 
-
 .navbar {
 	-webkit-box-shadow: 0px 0px 300px 0px rgba(0,0,0,0.05);
 	-moz-box-shadow: 0px 0px 300px 0px rgba(0,0,0,0.05);
@@ -223,13 +222,6 @@ body {
 		text-align: center;
 	}
 
-	.img-footer{
-		text-decoration: none;
-	}  
-	.img-footer: hover {
-		text-decoration: none;
-	}  
-
 
 	svg{
 		fill: #999;
@@ -292,7 +284,7 @@ body {
 	transition: .5s ease;
 	opacity: 0;
 	position: absolute;
-	top: 55%;
+	top: 53%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	-ms-transform: translate(-50%, -50%);
@@ -303,11 +295,130 @@ body {
 	color: #6c757d;
 }
 
+.img-footer:hover {
+	text-decoration: none;
+}
 
 
 
+/*INDIVIDUAL PAGES STYLING*/
+
+.pagesHeading{
+	font-family: Montserrat;
+	font-weight: 400;
+	font-size: 45px;
+}
+
+.pagesContent{
+	font-family: Montserrat;
+	font-size: 20px;
+}
+
+.topImg{
+	padding: 50px;
+}
 
 
+.contentText{
+	font-family: Montserrat;
+	font-size: 15px;
+	padding: 50px;
+}
+
+.contentTextDown{
+	font-family: Montserrat;
+	font-size: 15px;
+}
 
 
+.singPageTop{
+	padding-top: 120px;
+	padding-bottom: 0px;
+}
+
+.singPage{
+	padding: 0px;
+}
+
+.sectionHeading{
+	font-family: Montserrat;
+	font-size: 30px;
+}
+
+.middleImg{
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.footer{
+	display: flex;
+	justify-content: center;
+	width: 100%;
+	position: fixed;
+	bottom: 0px;
+	background-color: white;
+	z-index: 19;
+
+}
+
+.footer ul{
+	display: flex;
+	list-style-type: none;
+	font-family: Montserrat;
+	font-size: 15px;
+	margin: 5px;
+
+}
+
+.footer ul li{
+	padding-top: 5px;
+	margin: 5px;
+	padding-left: 25px;
+	position: relative;
+	color: rgba(0,0,0,0.3);
+}
+
+.footer ul li::before{
+	content: '';
+	position: absolute;
+	width: 20px;
+	height: 1px;
+	background-color: rgba(0,0,0,0.3);
+	top: 15px;
+	left: 0;
+}
+
+.footer ul li:first-of-type::before{
+	display: none;
+}
+
+.footer ul li:first-of-type{
+	margin-left: 0;
+	padding-left: 0;
+}
+
+.footerAdjust{
+	background-color: white;
+	height: 50px;
+}
+
+.footer {
+	-webkit-box-shadow: 0px 0px 300px 0px rgba(0,0,0,0.1);
+	-moz-box-shadow: 0px 0px 300px 0px rgba(0,0,0,0.1);
+	box-shadow: 0px 0px 300px 0px rgba(0,0,0,0.1);
+}
+
+.phoneImage {
+	border: solid 1px rgba(0,0,0,0.2);
+	border-radius: 5px;
+}
+
+.middleImg{
+	border-radius: 5px;
+}
+
+hr{
+	color: #AC3B61;
+}
 
