--- a/css/styles.css
+++ b/css/styles.css
@@ -329,6 +329,12 @@ body {
 	font-family: Montserrat;
 	font-size: 15px;
 }
+.contentText2{
+	font-family: Montserrat;
+	font-size: 15px;
+	padding: 10;
+	margin: 0;
+}
 
 
 .singPageTop{
