--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,21 @@
+/* Add a black background color to the top navigation */
+
+/*.main {
+	margin-top: 80px;  
+}*/
+
+/*
+
+p {
+	font-size: 1.5em;
+}*/
 
 body {
 	position: relative;
 	font-family: 'Roboto', sans-serif;
 
 }
+
 
 .navbar {
 	-webkit-box-shadow: 0px 0px 300px 0px rgba(0,0,0,0.05);
@@ -12,441 +24,194 @@ body {
 }
 
 .navbar-nav > li > a {
-	padding: 20px;
-	line-height: 20px;
-	font-size: 0.8em;
+padding: 20px;
+line-height: 20px;
+font-size: 0.8em;
 }
 
 @media (max-width: 767px) {
-	.navbar-nav > li > a {
-		line-height: 20px;
-		padding-top: 10px;
-		padding-bottom: 10px;}
-	}
-
-
-	.navbar-light > a > font {
-		padding-left: 2em;
-		font-family: 'Roboto', sans-serif;
-
-	}
-
-	.navbar-light .nav-item.active .nav-link,
-	.navbar-light .nav-item .nav-link:active,
-	.navbar-light .nav-item .nav-link:hover,
-	.navbar-light .nav-item:hover .nav-link {
-		color: rgba(0,0,0,.5);
-		font-family: 'Roboto', sans-serif;
-
-	}
-	.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav {
-		color: rgba(0,0,0,.5);
-	}
-	.navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
-		color: #AC3B61;
-		font-family: 'Roboto', sans-serif;
-	}
-
-
-	.cool-link {
-		display: inline-block;
-		color: #000;
-		text-decoration: none;
-	}
-
-	.cool-link::after {
-		content: '';
-		display: block;
-		width: 0;
-		height: 1px;
-		background: #AC3B61;
-		transition: width .3s;
-	}
-
-	.cool-link:hover::after {
-		width: 100%;
-		//transition: width .3s;
-	}
-
-
-	/*Intro Styling*/
-	.jumbotron .container > p,h1 {
-		color: #505050;
-	}
-
-
-	.jumbotron {
-		padding-top: 120px;
-		background-color: #f9f9f9;
-		font-weight: 300;
-		font-size: 1.5em;
-	}
-	.notice {
-		font-weight: 400;
-	}
-
-	/*Intro ReadMore Styling*/
-	.jumbotron {
-		background-color: #fff;
-
-	}
-	.jumbotron .container > p > a {
-		font-size: 15px;
-		color: #AC3B61;
-	}
-
-
-	#arrow {
-		position: relative;
-		right: 0;
-		transition: right ease 0.5s;
-		color: #AC3B61;
-	}
-	#arrow:hover {
-		right: -10px;
-		text-decoration: none;
-		color: #AC3B61;
-	}
-
-	.img-wrap {
-		height: auto;
-		width:	100%;
-		border-radius: 2%;
-	}
-	.text-muted {
-		color: #AC3B61;
-	}
-
-
-
-	.card {
-		position: relative;
-		display: -webkit-box;
-		display: -ms-flexbox;
-		display: flex;
-		-webkit-box-orient: vertical;
-		-webkit-box-direction: normal;
-		-ms-flex-direction: column;
-		flex-direction: column;
-		min-width: 0;
-		word-wrap: break-word;
-		background-color: #fff;
-		background-clip: border-box;
-		border: 1px solid rgba(0,0,0,0);
-		border-radius: .25rem;
-		padding: 20px;
-	}
-
-
-
-	/**/
-
-
-	.footer-basic-centered{
-		/*background-color: #292c2f;*/
-		background-color: #fff;
-
-		box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
-		box-sizing: border-box;
-		width: 100%;
-		text-align: center;
-		font: normal 18px sans-serif;
-
-		padding: 45px;
-		margin-top: 80px;
-	}
-
-	.footer-basic-centered .footer-company-motto{
-		color:  #8d9093;
-		font-size: 24px;
-		margin: 0;
-	}
-
-	.footer-basic-centered .footer-company-name{
-		color:  #8f9296;
-		font-size: 14px;
-		margin: 0;
-	}
-
-	.footer-basic-centered .footer-links{
-		list-style: none;
-		font-weight: bold;
-		color:  #ffffff;
-		padding: 35px 0 23px;
-		margin: 0;
-	}
-
-	.footer-basic-centered .footer-links a{
-		display:inline-block;
-		text-decoration: none;
-		color: inherit;
-	}
-
-	/* If you don't want the footer to be responsive, remove these media queries */
-
-	@media (max-width: 600px) {
-
-		.footer-basic-centered{
-			padding: 35px;
-		}
-
-		.footer-basic-centered .footer-company-motto{
-			font-size: 18px;
-		}
-
-		.footer-basic-centered .footer-company-name{
-			font-size: 12px;
-		}
-
-		.footer-basic-centered .footer-links{
-			font-size: 14px;
-			padding: 25px 0 20px;
-		}
-
-		.footer-basic-centered .footer-links a{
-			line-height: 1.8;
-		}
-	}
-
-
-	.foot-shadow {
-		-webkit-box-shadow: 0px -1px 300px 0px rgba(0,0,0,0.05);
-		-moz-box-shadow: 0px -1px 300px 0px rgba(0,0,0,0.05);
-		box-shadow: 0px -1px 300px 0px rgba(0,0,0,0.05);
-	}
-
-
-	.bottom-icon-parent{
-		margin: auto;
-		width: 50%;
-		text-align: center;
-	}
-
-
-	svg{
-		fill: #999;
-		margin:  10px;
-		margin-top: 40px;
-		margin-left: 20px;
-		margin-right: 20px;
-		text-decoration: none;
-	}
-
-	.img-footer:hover svg path{
-		fill: #AC3B61;
-		padding: 20px;
-		margin: 10px;
-		text-decoration: none;
-	}  
-	.img-footer:hover svg g text{
-		fill: #AC3B61;
-		stroke: #AC3B61;
-		padding: 20px;
-		margin: 10px;
-		text-decoration: none;
-	}  
-
-
-/* Card Hover Dynamics
-*/
-
-.card-body:hover .img_parent img {
-	opacity: 0.3;
+.navbar-nav > li > a {
+	line-height: 20px;
+	padding-top: 10px;
+	padding-bottom: 10px;}
 }
 
-.card-body:hover .img_parent {
-	background-color: #AC3B61;
-	border-radius: .25rem;
+
+.navbar-light > a > font {
+	padding-left: 2em;
+	font-family: 'Roboto', sans-serif;
+
 }
 
-.card-body:hover .midText {
-	opacity: 1;
-	font-weight: bold;
-	/*background-color: white; */
-	color: white;
+.navbar-light .nav-item.active .nav-link,
+.navbar-light .nav-item .nav-link:active,
+.navbar-light .nav-item .nav-link:hover,
+.navbar-light .nav-item:hover .nav-link {
+	color: rgba(0,0,0,.5);
+	font-family: 'Roboto', sans-serif;
+
+}
+.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav {
+	color: rgba(0,0,0,.5);
+}
+.navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
+	color: #AC3B61;
+	font-family: 'Roboto', sans-serif;
 }
 
-.card-body {
-	opacity: 1;
-	display: block;
-	width: 100%;
-	height: auto;
-	transition: .5s ease;
-	backface-visibility: hidden;
-}
 
-.card-body: .img_parent {
-	background-color: #AC3B61;
-}
-
-.midText {
-	color: white;
-	transition: .5s ease;
-	opacity: 0;
-	position: absolute;
-	top: 53%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	-ms-transform: translate(-50%, -50%);
-	text-align: center;
-}
-
-.downText{
-	color: #6c757d;
-}
-
-.img-footer:hover {
+.cool-link {
+	display: inline-block;
+	color: #000;
 	text-decoration: none;
 }
 
+.cool-link::after {
+	content: '';
+	display: block;
+	width: 0;
+	height: 1px;
+	background: #AC3B61;
+	transition: width .3s;
+}
+
+.cool-link:hover::after {
+	width: 100%;
+	//transition: width .3s;
+}
 
 
-/*INDIVIDUAL PAGES STYLING*/
-
-.pagesHeading{
-	font-family: Montserrat;
+/*Intro Styling*/
+.jumbotron .container > p,h1 {
+	color: #505050;
+}
+/*.jumbotron .container > h1 {
+	color: #505050;
+	padding-top: 10px;
+	color: #AC3B61;
+}*/
+.jumbotron {
+	padding-top: 120px;
+	background-color: #f9f9f9;
+	font-weight: 300;
+	font-size: 1.5em;
+}
+.notice {
 	font-weight: 400;
-	font-size: 45px;
 }
 
-.pagesContent{
-	font-family: Montserrat;
-	font-size: 20px;
+/*Intro ReadMore Styling*/
+.jumbotron {
+    background-color: #fff;
+
 }
-
-.topImg{
-	padding: 50px;
-	border-radius: 5px;
-}
-
-
-.contentText{
-	font-family: Montserrat;
+.jumbotron .container > p > a {
 	font-size: 15px;
-	padding: 50px;
+	color: #AC3B61;
+}
+/*.jumbotron .container > p > a > i{
+	font-size: 12px;
+	color: #AC3B61;
+}
+*/
+#arrow {
+  position: relative;
+  right: 0;
+  transition: right ease 0.5s;
+  color: #AC3B61;
+}
+#arrow:hover {
+  right: -10px;
+  text-decoration: none;
+  color: #AC3B61;
 }
 
-.contentTextDown{
-	font-family: Montserrat;
-	font-size: 15px;
+/*.parent:hover i:not(:hover) {
+    color: #AC3B61;
 }
-.contentText2{
-	font-family: Montserrat;
-	font-size: 15px;
-	padding: 10;
+*/
+
+.img-wrap {
+  	height: auto;
+	width:	100%;
+	border-radius: 2%;
+}
+
+
+
+
+/**/
+
+
+.footer-basic-centered{
+	/*background-color: #292c2f;*/
+	background-color: #fff;
+
+	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+	box-sizing: border-box;
+	width: 100%;
+	text-align: center;
+	font: normal 18px sans-serif;
+
+	padding: 45px;
+	margin-top: 80px;
+}
+
+.footer-basic-centered .footer-company-motto{
+	color:  #8d9093;
+	font-size: 24px;
 	margin: 0;
 }
 
-
-.singPageTop{
-	padding-top: 120px;
-	padding-bottom: 0px;
+.footer-basic-centered .footer-company-name{
+	color:  #8f9296;
+	font-size: 14px;
+	margin: 0;
 }
 
-.singPage{
-	padding: 0px;
+.footer-basic-centered .footer-links{
+	list-style: none;
+	font-weight: bold;
+	color:  #ffffff;
+	padding: 35px 0 23px;
+	margin: 0;
 }
 
-.sectionHeading{
-	font-family: Montserrat;
-	font-size: 30px;
+.footer-basic-centered .footer-links a{
+	display:inline-block;
+	text-decoration: none;
+	color: inherit;
 }
 
-.middleImg{
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-}
+/* If you don't want the footer to be responsive, remove these media queries */
 
-.footer{
-	display: flex;
-	justify-content: center;
-	width: 100%;
-	position: fixed;
-	bottom: 0px;
-	background-color: white;
-	z-index: 19;
+@media (max-width: 600px) {
 
-}
+	.footer-basic-centered{
+		padding: 35px;
+	}
 
-.footer ul{
-	display: flex;
-	list-style-type: none;
-	font-family: Montserrat;
-	font-size: 15px;
-	margin: 5px;
+	.footer-basic-centered .footer-company-motto{
+		font-size: 18px;
+	}
 
-}
+	.footer-basic-centered .footer-company-name{
+		font-size: 12px;
+	}
 
-.footer ul li{
-	padding-top: 5px;
-	margin: 5px;
-	padding-left: 25px;
-	position: relative;
-	color: rgba(0,0,0,0.3);
-}
+	.footer-basic-centered .footer-links{
+		font-size: 14px;
+		padding: 25px 0 20px;
+	}
 
-.footer ul li::before{
-	content: '';
-	position: absolute;
-	width: 20px;
-	height: 1px;
-	background-color: rgba(0,0,0,0.3);
-	top: 15px;
-	left: 0;
-}
-
-.footer ul li:first-of-type::before{
-	display: none;
-}
-
-.footer ul li:first-of-type{
-	margin-left: 0;
-	padding-left: 0;
-}
-
-.footerAdjust{
-	background-color: white;
-	height: 50px;
-}
-
-.footer {
-	-webkit-box-shadow: 0px 0px 300px 0px rgba(0,0,0,0.1);
-	-moz-box-shadow: 0px 0px 300px 0px rgba(0,0,0,0.1);
-	box-shadow: 0px 0px 300px 0px rgba(0,0,0,0.1);
-}
-
-.phoneImage {
-	border: solid 1px rgba(0,0,0,0.2);
-	border-radius: 5px;
-}
-
-.middleImg{
-	border-radius: 5px;
-}
-
-hr{
-	color: #AC3B61;
+	.footer-basic-centered .footer-links a{
+		line-height: 1.8;
+	}
 }
 
 
-a {
-    color: black;
-    text-decoration: none;
-    background-color: transparent;
-    -webkit-text-decoration-skip: objects;
+.foot-shadow {
+	-webkit-box-shadow: 0px -1px 300px 0px rgba(0,0,0,0.05);
+	-moz-box-shadow: 0px -1px 300px 0px rgba(0,0,0,0.05);
+	box-shadow: 0px -1px 300px 0px rgba(0,0,0,0.05);
 }
-
-a:hover {
-    color: black;
-    text-decoration: underline;
-    background-color: transparent;
-    -webkit-text-decoration-skip: objects;
-}
-
-.contentText3{
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-}
-
