--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+.htmlScroll {
+  scroll-behavior: smooth;
+}
+
 
 body {
 	position: relative;
@@ -430,19 +434,18 @@ hr{
 }
 
 
-a {
+/*.footer a {
     color: black;
     text-decoration: none;
     background-color: transparent;
     -webkit-text-decoration-skip: objects;
-}
-
-a:hover {
+}*/
+/*a:hover {
     color: black;
     text-decoration: underline;
     background-color: transparent;
     -webkit-text-decoration-skip: objects;
-}
+}*/
 
 .contentText3{
 	display: block;
@@ -450,3 +453,6 @@ a:hover {
 	margin-right: auto;
 }
 
+.singPage{
+	margin-top: 00px;
+}
