--- a/css/styles.css
+++ b/css/styles.css
@@ -431,6 +431,11 @@ img{
 	border-radius: 5px;
 }
 
+.phoneImage2 {
+	border: solid 2px rgba(0,0,0,0.5);
+	border-radius: 5px;
+}
+
 .middleImg{
 	border-radius: 5px;
 }
