--- a/css/styles.css
+++ b/css/styles.css
@@ -491,11 +491,11 @@ em:hover .extra {
 }
 
 
-.imageBottom{
+/*.imageBottom{
 	max-width: 100%;
 	box-shadow: 0 0 8px rgba(0,0,0,0.3);
 }
-
+*/
 .sideSpacing{
 	padding-left: 150px;
 	padding-right: 150px;
@@ -514,8 +514,8 @@ em:hover .extra {
 .imageTop {
   width: 25px;
   position: absolute;
-  right: 9%;
-  top: 14%;
+  right: 70px;
+  top: 70px;
 }
 
 .chiImg{
@@ -541,51 +541,26 @@ em:hover .extra {
 
 
 
-/*
-.image-container {
-  
-
-  background: url('../covers/mime.png') center center no-repeat;
-  background-size: contain;
-
-  width: match-parent;
-  height: 200px;
-
-  -webkit-transition: all .3s ease-in-out;
-  -moz-transition: all .3s ease-in-out;
-  transition: all .3s ease-in-out;
+.image-wrapper {
+  position: relative;
 }
 
-.image-container:hover {
-  background-image: url('../covers/mime2.png');
-}*/
-
-/*
-
-.transition img:first-child{
-	top: 0;
-	left: 0;
-	opacity: 1;
-
+.image-wrapper img{
+  max-width: 100%;
+  box-shadow: 0 0 8px rgba(0,0,0,0.3);
 }
 
-.transition img:last-child{
-	position: absolute;
-	top: 0;
-	left: 0;
-	opacity: 0;
+
+.image-hover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transition: opacity 0.2s ease-out;
 }
-
-.transition:hover img:last-child{
-	opacity: 1;
+.image-hover:hover {
+  opacity: 1;
 }
-
-.transition:hover img:first-child{
-	opacity: 0;
-}*/
-
-
-
 
 
 
