--- a/css/styles.css
+++ b/css/styles.css
@@ -364,6 +364,9 @@ img{
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
+	box-shadow: 0 0 10px rgba(0,0,0,.4);
+
+
 }
 
 .footer{
@@ -428,6 +431,7 @@ img{
 .phoneImage {
 	border: solid 1px rgba(0,0,0,0.2);
 	border-radius: 5px;
+	box-shadow: 0 0 10px rgba(0,0,0,.4);
 }
 
 .phoneImage2 {
@@ -600,6 +604,75 @@ span.sherpaColor{
 	box-shadow: 0 0 5px rgba(0,0,0,.2);
 }
 
+
+.numberOfUsers{
+	font-weight: 300;
+	text-align: center;
+	font-size: 50px;
+}
+
+.smallImages{
+	max-width: 100%;
+	padding: 0px;
+}
+
+.swiper-container {
+	width: 80%;
+}
+.swiper-slide {
+	text-align: center;
+	font-size: 18px;
+	background: #fff;
+	/* Center slide text vertically */
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
+	-webkit-justify-content: center;
+	justify-content: center;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	-webkit-align-items: center;
+	align-items: center;
+	--swiper-theme-color: #fff;
+}
+
+.painPoints{
+	width:80%;
+	margin:10px;
+}
+
+
+.painPointsImg{
+	align-content: left;
+	margin:10px;
+}
+
+.ppRow{
+	display: flex;
+	align-items: center;
+}
+
+.bottomMargin{
+	margin-bottom: 100px;
+}
+
+.dataAnImage img{
+	width:80px;
+	margin
+}
+
+.dataAnImage{
+	text-align: center;
+}
+
+
+.swiper-container{
+	border-radius: 5px;
+	box-shadow: 0 0 10px rgba(0,0,0,.4);
+}
 
 
 
