--- a/css/styles.css
+++ b/css/styles.css
@@ -368,9 +368,7 @@ img{
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	box-shadow: 0 0 10px rgba(0,0,0,.4);
-
-
+	/*box-shadow: 0 0 10px rgba(0,0,0,.2);*/
 }
 
 .footer{
@@ -435,7 +433,7 @@ img{
 .phoneImage {
 	border: solid 1px rgba(0,0,0,0.2);
 	border-radius: 5px;
-	box-shadow: 0 0 10px rgba(0,0,0,.4);
+	box-shadow: 0 0 10px rgba(0,0,0,.2);
 }
 
 .phoneImage2 {
@@ -475,9 +473,9 @@ hr{
 	margin-top: 00px;
 }
 
-/*.topHeading unavColor {
+.topHeading{
 	font-weight: bold;
-}*/
+}
 
 .extra { 
   visibility: hidden;
@@ -621,6 +619,12 @@ span.sherpaColor{
 	padding: 0px;
 }
 
+
+.swiper-container{
+	border-radius: 5px;
+	/*box-shadow: 0 0 10px rgba(0,0,0,.2);*/
+}
+
 .swiper-container {
 	width: 80%;
 }
@@ -659,6 +663,19 @@ span.sherpaColor{
 	display: flex;
 	align-items: center;
 }
+.ppRow2{
+	display: flex;
+	align-items: flex-start;
+}
+.ppRow2 img{
+	margin-top: 0px;
+}
+
+.ppRowWith{
+	display: flex;
+	align-items: center;
+	/*box-shadow: 0 0 10px rgba(0,0,0,.2);*/
+}
 
 .bottomMargin{
 	margin-bottom: 100px;
@@ -674,10 +691,6 @@ span.sherpaColor{
 }
 
 
-.swiper-container{
-	border-radius: 5px;
-	box-shadow: 0 0 10px rgba(0,0,0,.4);
-}
 
 /*.swiper-slide > img:hover {
 	max-width: 200%
@@ -700,6 +713,13 @@ span.sherpaColor{
 .ss2{
 	font-size: 100px;
 	font-weight: 600;
+}
+
+.imageText{
+	text-align: center;
+	font-size: 20px;
+	font-style: italic;
+	color: #888;
 }
 
 
