--- a/updated/css/mainStyle.css
+++ b/updated/css/mainStyle.css
@@ -86,23 +86,11 @@ a, a:hover, a:active, a:visited {
       var(--color6) 85%
     );
 }
-/*
-.selectedCategoryButton{
-  border-image: conic-gradient(
-    var(--color1),
-    var(--color2),
-    var(--color3),
-    var(--color4),
-    var(--color5),
-    var(--color6)) 1;
 
-}
- */
-
- .projectCard{
+.projectCard{
    margin-bottom: 5em;
    border-radius: 10px;
- 	/* height: 300px; */
+ 	 height: 90%;
  }
 
 .project1{
@@ -158,7 +146,18 @@ a, a:hover, a:active, a:visited {
 
 .project1subImage{
   width: 60%;
-  /* margin-top: 2em; */
+  padding: 1em;
+}
+.project2subImage{
+  width: 60%;
+  padding: 1em;
+}
+.project3subImage{
+  width: 60%;
+  padding: 1em;
+}
+.project4subImage{
+  width: 100%;
   padding: 1em;
 }
 
@@ -168,9 +167,15 @@ a, a:hover, a:active, a:visited {
   margin-right: 0.3em;
 	font-size: 3em;
 }
+
 .impactText{
+  position: absolute;
   width: 100%;
+  bottom: 7em;
+  right: 2.5em;
   text-align: right;
+  /* vertical-align: sub; */
+  /* bottom: 0px; */
   font-size: 0.5em;
 }
 
