--- a/updated/css/mainStyle.css
+++ b/updated/css/mainStyle.css
@@ -44,6 +44,9 @@ a, a:hover, a:active, a:visited {
   font-family: Mosk800;
 	font-size: 4.5em;
 	color: var(--color-white);
+  /* align-items: center; */
+  align-items: flex-end;
+  display: flex;
 }
 
 .categoriesSection{
@@ -224,7 +227,6 @@ a, a:hover, a:active, a:visited {
 
 
 @media (max-width: 576px) {
-
 	.categoriesSection{
 		text-align: center;
 	}
