--- a/updated/css/mainStyle.css
+++ b/updated/css/mainStyle.css
@@ -20,6 +20,8 @@
   --color-white: #ffffff;
   --color-dark: #555555;
 
+  --color-white-text: #ffffffE6;
+
   --color-white-transparent: #ffffff80;
 }
 
