--- a/updated/css/mainStyle.css
+++ b/updated/css/mainStyle.css
@@ -17,7 +17,7 @@
 	--color6: #0fa;
 
 	--color-background: #181818;
-  --color-white: #ffffff;
+  --color-white: #ffffffE6;
   --color-dark: #555555;
 
   --color-white-text: #ffffffE6;
