--- a/css/pageStyle.css
+++ b/css/pageStyle.css
@@ -105,6 +105,7 @@
   padding-bottom: 1rem;
 }
 
+
 .backgroundImage{
   border-radius: 20px;
   max-width: 100%;
@@ -114,6 +115,7 @@
   margin-right: auto;
 
 }
+
 .textImage{
   width: 60%;
   text-align: center;
@@ -128,6 +130,14 @@
   font-size: 4em;
   font-family: 'Roboto', sans-serif;
   font-weight: 600;
+}
+
+.nsf_image img{
+    width: 50%;
+    display: block;
+    margin: 1rem;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .introTextHeading{
