added the gray interaction color

--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -19,6 +19,8 @@
 	--color5: #85f;
 	--color6: #0fa;
 
+  --color-gray: #dedede;
+
 	--color-background: #181818;
   --color-white: #ffffffE6;
   --color-dark: #555555;
